# auth_service

./: .env.example  README.md  main.py  pyproject.toml
src/: routes.py
src/core/: celery_config.py  config.py  redis_initializer.py
src/database/: models.py
src/modules/grpc_token_validator/: grpc_token_validator.py
src/modules/reg_module/: depends.py  routes.py  schemas.py  utils.py
src/modules/reg_module/jwt_module/: creator.py  depends.py
src/modules/shared/: jwt_schemas.py
src/modules/smtp_celery_sender/: send_code_to_user.py
src/services/: user_services.py
